--- a/README
+++ b/README
@@ -1,11 +1,17 @@
 Cacoo Mode
 ========================================
 
-Cacooで書いた画像をインラインで表示したり、編集画面をさっと開くことのできるマイナーモードです。画像はローカルにキャッシュしていますので、オフラインでも画像を見ることができます。インライン表示時には自動的に指定のサイズに縮小します。
+Cacooで書いた画像をインラインで表示したり、編集画面をさっと開くことので
+きるマイナーモードです。画像はローカルにキャッシュしていますので、オフ
+ラインでも画像を見ることができます。インライン表示時には自動的に指定の
+サイズに縮小します。
 
-実際にはCacooだけではなく、URLで参照できてEmacsとImageMagickが解釈できる図であれば大抵インライン表示できます。
+実際にはCacooだけではなく、URLで参照できてEmacsとImageMagickが解釈でき
+る図であれば大抵インライン表示できます。
 
-良く似たものにiimage（Emacs標準添付）があります。iimageはローカルのファイルを表示するのみですが、それをWebから取得可能にしたり、自動で縮小したり、その他Cacooの編集機能をつけたようなものです。
+良く似たものにiimage（Emacs標準添付）があります。iimageはローカルのファ
+イルを表示するのみですが、それをWebから取得可能にしたり、自動で縮小した
+り、その他Cacooの編集機能をつけたようなものです。
 
 インストール
 ----------------------------------------
@@ -13,7 +19,9 @@ Cacooで書いた画像をインラインで表示したり、編集画面をさ
 必要なもの、環境
  wget, ImageMagick(convert, identify, display)
 
-ロードパスに cacoo.el を置き、以下のように呼び出し用のコードを .emacs などに追加してください。以下の例では、Altキーを押しながら「-」を押すとOn/Offが切り替わるようになります。
+ロードパスに cacoo.el を置き、以下のように呼び出し用のコードを .emacs
+などに追加してください。以下の例では、Altキーを押しながら「-」を押すと
+On/Offが切り替わるようになります。
 
  ;設定例
  (require 'cacoo)
@@ -68,20 +76,26 @@ Web上の画像
 カスタマイズなど
 ----------------------------------------
 
-ブラウザーはEmacsで設定してあるデフォルトブラウザーを使います。browse-url-browser-function 周辺を設定してみてください。
+ブラウザーはEmacsで設定してあるデフォルトブラウザーを使います。
+browse-url-browser-function 周辺を設定してみてください。
 
 例：Macでsafariを使う場合
  (setq browse-url-browser-function 'browse-url-generic)
  (setq browse-url-generic-program "open")
 
-cacoo:img-regexp, cacoo:img-pattern を変更することで、Wiki記法などにあわせることができます。
+cacoo:img-regexp, cacoo:img-pattern を変更することで、Wiki記法などにあ
+わせることができます。
 
-キャッシュ用のディレクトリ名は cacoo:img-dir で指定します。いちいちディレクトリ作成で確認が必要なければ、 cacoo:img-dir-ok を t に設定してください。
+キャッシュ用のディレクトリ名は cacoo:img-dir で指定します。いちいちディ
+レクトリ作成で確認が必要なければ、 cacoo:img-dir-ok を t に設定してくだ
+さい。
 
-画像の縮小サイズは cacoo:max-size で指定します。以下のように書くことで画像ごとにも指定できます。
+画像の縮小サイズは cacoo:max-size で指定します。以下のようにスペース区
+切りで書くことで画像ごとにも指定できます。
 [img:file:///xxx/yyy/zzz.png 600]
 
-外部画像ビューアーのプログラムは cacoo:external-viewer で指定します。nilに設定するとEmacsで開こうとします。
+外部画像ビューアーのプログラムは cacoo:external-viewer で指定します。
+nilに設定するとEmacsで開こうとします。
 
 
 ライセンスなど
@@ -91,3 +105,6 @@ License
 
 Repository
   http://github.com/kiwanami/emacs-cacoo
+
+SAKURAI, Masashi
+m.sakurai@kiwanami.net
