--- a/README
+++ b/README
@@ -109,6 +109,10 @@ Emacs22などではPNGの透過部分が黒くなることがあります。
 (setq cacoo:png-background "white") を設定に追加して画像のリロードを
 してみてください。
 
+プラグインによって、その場で画像を生成したり高度なこともできるようになっ
+ています。詳しくはプラグイン周辺のソースの中のコメントを参照してくださ
+い。
+
 制限事項
 ----------------------------------------
 
