コメント、説明文多少追加。

--- a/README
+++ b/README
@@ -92,7 +92,8 @@ browse-url-browser-function 周辺を設定してみてください。
  (setq browse-url-generic-program "open")
 
 cacoo:img-regexp, cacoo:img-pattern を変更することで、Wiki記法などにあ
-わせることができます。
+わせることができます。cacoo:img-regexp は正規表現文字列のリストにもでき
+ますので、いくつかの記法を登録しておくことが出来ます。
 
 キャッシュ用のディレクトリ名は cacoo:img-dir で指定します。いちいちディ
 レクトリ作成で確認が必要なければ、 cacoo:img-dir-ok を t に設定してくだ
@@ -110,8 +111,11 @@ Emacs22などではPNGの透過部分が黒くなることがあります。
 してみてください。
 
 プラグインによって、その場で画像を生成したり高度なこともできるようになっ
-ています。詳しくはプラグイン周辺のソースの中のコメントを参照してくださ
-い。
+ています。UMLやシーケンス図のほかにも、LaTeX数式や、GoogleChartAPIのよ
+うなグラフ、またgnuplotやgraphvizのようにコマンドラインから図を生成する
+ようなものも本文中に書けるようになりました。詳しくはプラグイン周辺のソー
+スの中のコメントを参照してください。
+
 
 制限事項
 ----------------------------------------
