--- a/README
+++ b/README
@@ -84,16 +84,24 @@ Web上の画像
 カスタマイズなど
 ----------------------------------------
 
-ブラウザーはEmacsで設定してあるデフォルトブラウザーを使います。
-browse-url-browser-function 周辺を設定してみてください。
+ブラウザは cacoo:browser-function で設定してあるものを使います。
+デフォルトは browse-url-browser-function の値です。
 
 例：Macでsafariを使う場合
- (setq browse-url-browser-function 'browse-url-generic)
- (setq browse-url-generic-program "open")
+(setq cacoo:browser-function 'browse-url-generic)
+(setq browse-url-generic-program "open")
 
 cacoo:img-regexp, cacoo:img-pattern を変更することで、Wiki記法などにあ
 わせることができます。cacoo:img-regexp は正規表現文字列のリストにもでき
 ますので、いくつかの記法を登録しておくことが出来ます。
+
+例：複数登録や貼り付け文字列のカスタマイズ
+(setq cacoo:img-regexp 
+     '("\\[img:\\(.*\\)\\][^]\n\r]*$"
+       "\\[f:\\(.*\\)\\][^]\n\t]*$"
+       "<img src=[\"']\\(.*\\)[\"'][ ]*\\/>[^\n\t]*$"
+       ))
+(setq cacoo:img-pattern "<img src=\"%s\" />")
 
 キャッシュ用のディレクトリ名は cacoo:img-dir で指定します。いちいちディ
 レクトリ作成で確認が必要なければ、 cacoo:img-dir-ok を t に設定してくだ
